<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:scrollbars="none">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingHorizontal="2dp"
        android:paddingBottom="8dp">


        <include
            android:id="@+id/toolbar"
            layout="@layout/layout_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="-30dp" />

        <TextView
            android:id="@+id/home_title_1"
            style="@style/main_page_header"
            android:fontFamily="@font/gm_global_sans_black"
            android:paddingHorizontal="32dp"
            android:text="@string/safe_at_work" />


        <LinearLayout
            style="@style/main_card_layout"
            android:layout_marginTop="64dp">


            <TextView
                android:id="@+id/tst_conf_desc_1"
                style="@style/big_italic_text"
                android:layout_marginTop="0dp"
                android:layout_marginBottom="-25dp"
                android:fontFamily="@font/gm_global_sans_light_italic"
                android:text="@string/thank_you_confirmation" />

            <TextView
                android:id="@+id/home_desc_2"
                style="@style/regular_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="28dp"
                android:fontFamily="@font/gm_global_sans_light_italic"
                android:text="@string/tst_conf_continue"
                android:textSize="18sp" />

            <Button
                android:id="@+id/continue_using_button"
                style="@style/main_button"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:layout_marginBottom="20dp"
                android:text="@string/im_covid_free" />

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/footer_quote"
                style="@style/footer_quote_style"
                android:text="@string/footer_quote_text" />
        </RelativeLayout>

    </LinearLayout>
</ScrollView>