<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingHorizontal="2dp"
            android:paddingBottom="8dp">

            <include
                android:id="@+id/toolbar"
                layout="@layout/layout_toolbar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="-30dp" />

            <TextView
                android:id="@+id/home_title_1"
                style="@style/main_page_header"
                android:fontFamily="@font/gm_global_sans_black"
                android:paddingHorizontal="32dp"
                android:text="@string/safe_at_work" />

            <LinearLayout
                style="@style/main_card_layout"
                android:layout_marginTop="64dp">

                <TextView
                    android:id="@+id/home_desc_1"
                    style="@style/regular_text"
                    android:layout_marginTop="0dp"
                    android:fontFamily="@font/arial"
                    android:text="@string/call_tested_positive"
                    android:textSize="18sp" />

                <Button
                    android:id="@+id/dial_medical_button"
                    style="@style/main_button"
                    android:fontFamily="@font/montserrat"
                    android:text="@string/dial_medical" />

                <Button
                    android:id="@+id/report_button"
                    style="@style/main_button_red"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="48dp"
                    android:fontFamily="@font/montserrat"
                    android:text="@string/send_interactions"
                    android:textSize="18sp" />

            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>
        </LinearLayout>
    </ScrollView>

</LinearLayout>