<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:scrollbars="none">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingHorizontal="3dp"
        android:paddingBottom="32dp">

<!--        <ImageView-->
<!--            android:layout_width="286dp"-->
<!--            android:layout_height="40dp"-->
<!--            android:layout_gravity="center"-->
<!--            android:layout_marginHorizontal="4dp"-->
<!--            android:layout_marginTop="4dp"-->
<!--            android:baselineAlignBottom="false"-->
<!--            app:srcCompat="@drawable/logo_placeholder" />-->

        <TextView
            android:layout_width="match_parent"
            android:layout_height="59dp"
            android:fontFamily="@font/gm_global_sans_black"
            android:text="@string/bluetooth_explanation_title"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textSize="40dp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="64dp"
            android:background="#333333"
            android:orientation="vertical"
            android:paddingVertical="20dp">


            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="53dp"
                android:fontFamily="sans-serif-light"
                android:text="@string/bluetooth_explanation_sub_title"
                android:textAlignment="center"
                android:textSize="30sp"
                android:textStyle="italic" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/arial"
                android:text="@string/bluetooth_explanation_text"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:fontFamily="@font/arial"
                android:text="@string/bluetooth_explanation_subtext"
                android:textAlignment="center"
                android:textSize="14sp" />

            <Button
                android:id="@+id/grant_location_access_button"
                style="@style/main_button"
                android:layout_width="match_parent"
                android:layout_height="46dp"
                android:layout_marginHorizontal="40dp"
                android:layout_marginTop="32dp"
                android:backgroundTint="#DB9815"
                android:fontFamily="@font/montserrat"
                android:text="@string/grant_location_access"
                android:textAlignment="center"
                android:textColor="#333333"
                android:textSize="16sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="-40dp"
            android:fontFamily="@font/arial"
            android:text="@string/enter_contact_phone_number"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/contact_phone_number2"
            style="@style/main_regular_input"
            android:layout_width="match_parent"
            android:layout_height="56dip"
            android:layout_marginLeft="0dip"
            android:layout_marginTop="60dip"
            android:layout_marginRight="0dip"
            android:layout_marginBottom="-25dip"
            android:fontFamily="@font/montserrat"
            android:hint="+1 (313) 555-1234"
            android:inputType="phone"
            android:selectAllOnFocus="true" />

        <Button
            android:id="@+id/save_button2"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginTop="32dp"
            android:background="#DB9815"
            android:fontFamily="@font/montserrat"
            android:text="SAVE CONTACT NUMBER"
            android:textColor="#333333"
            android:textSize="22sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="109dp" />


    </LinearLayout>

</ScrollView>