<?xml version="1.0" encoding="utf-8"?>
<androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/swipeRefreshLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingHorizontal="3dp"
            android:paddingBottom="32dp">

            <include
                android:id="@+id/toolbar"
                layout="@layout/layout_toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="-30dp" />

            <TextView
                android:id="@+id/home_title_1"
                style="@style/main_page_header"
                android:fontFamily="@font/gm_global_sans_black"
                android:paddingHorizontal="32dp"
                android:text="@string/safe_at_work" />

            <TextView
                android:id="@+id/contact_warning_banner"
                style="@style/AlertBannerTop"
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:background="@color/orange_alert"
                android:visibility="gone"
                tools:text="You may have been in contact with COVID-19"
                tools:visibility="visible" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="58dp" />

            <LinearLayout style="@style/main_card_layout">

                <View style="@style/common_divider_1" />

                <TextView
                    android:id="@+id/status_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:fontFamily="@font/gm_global_sans_black"
                    android:paddingHorizontal="32dp"
                    android:text="@string/social_distance_detection"
                    android:textAlignment="center"
                    android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:id="@+id/warning_banner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/imageView3"
                        android:layout_width="80dp"
                        android:layout_height="80dp"

                        android:layout_marginHorizontal="36dp"
                        android:layout_marginVertical="28dp"
                        app:srcCompat="@drawable/safe" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"

                        android:paddingHorizontal="1dp">

                        <TextView
                            android:id="@+id/warning_header"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="30dp"
                            android:fontFamily="@font/gm_global_sans_black"
                            android:textColor="@color/yellowgreen"
                            android:textSize="26sp"
                            android:textStyle="bold"
                            tools:text="@string/safe_text" />

                        <TextView
                            android:id="@+id/warning_desc"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="2dp"
                            android:fontFamily="@font/arial"
                            android:text="No people detected nearby"
                            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                            android:textSize="16sp"
                            android:textStyle="bold" />

                    </LinearLayout>

                </LinearLayout>

                <TextView
                    android:id="@+id/info_banner"
                    style="@style/AlertBanner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="32dp"
                    android:layout_marginTop="20dp"
                    android:background="@color/orange_alert"
                    android:visibility="gone"
                    tools:text="Turn Bluetooth on for  this device"
                    tools:visibility="visible" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <View style="@style/common_divider_1" />


                <androidx.viewpager2.widget.ViewPager2
                    android:id="@+id/interactions_pager"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

                <com.google.android.material.tabs.TabLayout
                    android:id="@+id/interactions_dots"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:tabBackground="@drawable/tab_selector"
                    app:tabGravity="center"
                    app:tabIndicatorHeight="0dp" />

                <View style="@style/common_divider_1" />

            </LinearLayout>

            <SeekBar
                android:id="@+id/seekBar"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_gravity="center"
                android:layout_marginHorizontal="48dp"
                android:layout_marginTop="16dip"
                android:background="@drawable/swipetrack_to_positive"
                android:max="100"
                android:thumb="@drawable/swipedot40"
                android:thumbOffset="12dp"
                android:visibility="visible" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="18dp" />

        </LinearLayout>
    </ScrollView>

</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>